test_outputs/connlist/anp_with_banp_new_test_connlist_output.txt
0.0.0.0-255.255.255.255[External] => ns1/pod1[Deployment] : All Connections
0.0.0.0-255.255.255.255[External] => ns2/pod1[Deployment] : All Connections
ns1/pod1[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
ns1/pod1[Deployment] => ns2/pod1[Deployment] : All Connections
ns2/pod1[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
ns2/pod1[Deployment] => ns1/pod1[Deployment] : TCP 80-81
